# doc2trlc

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
src/doc2trlc/: __init__.py  __main__.py  version.py
tests/: test_main.py
