[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2-trlc"
version = "0.0.0"
description = "A Tool to extract TRLC Information out of Word Documents."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Norbert Schulz", email = "github@schulznorbert.de" }
]
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "toml >= 0.10.2",
    "python-docx >= 1.1.2"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/nhjschulz/doc2trlc"
repository = "https://github.com/nhjschulz/doc2trlc"
tracker = "https://github.com/nhjschulz/doc2trlc/issues"

[project.scripts]
doc2trlc = "doc2trlc.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
doc2trlc = ["pyproject.toml"]
